--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     </header>
 
     <main>
-      <h2 class="time">Time: 00:00</h2>
-      <script src="wordle.js"></script>
+      <h2 id="timer">00:00</h2>
 
       <div class="board-row row-0">
         <div class="board-column" data-index="00"></div>
@@ -106,5 +105,6 @@
         <div class="delete-column" data-key="지우기">지우기</div>
       </div>
     </footer>
+    <script src="js/index.js"></script>
   </body>
 </html>
